--- a/speech.html
+++ b/speech.html
@@ -63,7 +63,7 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Speech</h2>
+          <h2>Medium: Speech</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
             <li>Speech</li>
