--- a/text.html
+++ b/text.html
@@ -63,7 +63,7 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Text</h2>
+          <h2>Medium: Text</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
             <li>Text</li>
