--- a/speech.html
+++ b/speech.html
@@ -37,9 +37,9 @@
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top header-inner-pages">
     <div class="container d-flex align-items-center justify-content-between">
-      <h1 class="logo"><a href="index.html">L T</a></h1>
+      <!-- <h1 class="logo"><a href="index.html">L T</a></h1> -->
       <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+       <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -47,7 +47,7 @@
           <li><a class="nav-link scrollto" href="index.html#how-to-use">How to Use</a></li>
           <li><a class="nav-link scrollto" href="index.html#about">About</a></li>
           <li><a class="nav-link scrollto" href="index.html#faq">FAQ</a></li>
-          <li><a class="getstarted scrollto" href="index.html#get-started">Get Started</a></li>
+          <li><a class="getstarted scrollto" href="text.html">Medium: Text</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -58,7 +58,7 @@
 
 <main id="main">
 
-    <!-- ======= Breadcrumbs ======= -->
+    <!-- ======= Breadcrumbs ======= --> 
     <section class="breadcrumbs">
       <div class="container">
 
@@ -100,11 +100,9 @@
           </div>
         </div>
         <div class="social-links text-center text-md-right pt-3 pt-md-0">
-          <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/simran2104/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://github.com/simran2104" class="instagram"><i class="bx bxl-github"></i></a>
+          <a href="https://twitter.com/simran_2104" class="twitter"><i class="bx bxl-twitter"></i></a>
         </div>
       </div>
 
